<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="welcome_to_go_android">Welcome to GO Android!</string>
    <string name="id">ID</string>
    <string name="wrID">아이디를 입력하세요.</string>
    <string name="PW">PW</string>
    <string name="wrPW">비밀번호를 입력하세요.</string>
    <string name="btLog">LOGIN</string>
    <string name="btSi">SIGN UP</string>
    <string name="signup">SIGNUP</string>
    <string name="finSign">회원가입 완료</string>
    <string name="korpw">비밀번호</string>
    <string name="name">이름</string>
    <string name="wrName">이름을 입력하세요.</string>
    <string name="spec">특기</string>
    <string name="wrSpec">특기를 입력하세요.</string>
    <string name="pfName">이름:</string>
    <string name="pfSpec">특기:</string>
    <string name="tv_gallery">gallery</string>
    <string name="tv_search">search</string>
    <string name="iv_description">image of github_repo</string>
    <string name="tv_repo_title">Emjay Repositories</string>
    <string name="tv_repo_name">Repo Name</string>
    <string name="tv_repo_author">Emjay Kim</string>
    <string name="item_home">홈</string>
    <string name="item_search">검색</string>
    <string name="item_photo">갤러리</string>
</resources>
