<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        app:layout_constraintEnd_toEndOf="@id/bt_fsu"
        />

    <TextView
        android:id="@+id/bt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_2"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/wrID"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/bt_id"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        app:layout_constraintEnd_toEndOf="@id/bt_fsu"
        />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/korpw"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_id"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/wrPW"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        app:layout_constraintEnd_toEndOf="@id/bt_fsu"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/wrName"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        app:layout_constraintEnd_toEndOf="@id/bt_fsu"
        />

    <TextView
        android:id="@+id/tv_spec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spec"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        />

    <EditText
        android:id="@+id/et_spec"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/wrSpec"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_spec"
        app:layout_constraintStart_toStartOf="@id/bt_fsu"
        app:layout_constraintEnd_toEndOf="@id/bt_fsu"
        />

    <Button
        android:id="@+id/bt_fsu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/finSign"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_spec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>