<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_go_android"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bt_si"
        app:layout_constraintStart_toStartOf="@id/bt_si"
        />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_1"
        app:layout_constraintStart_toStartOf="@id/bt_si"
        />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/wrID"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintStart_toStartOf="@id/bt_si"
        app:layout_constraintEnd_toEndOf="@id/bt_si"
        />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PW"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/et_id"
        app:layout_constraintStart_toStartOf="@id/bt_si"
        />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/wrPW"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        app:layout_constraintStart_toStartOf="@id/bt_si"
        app:layout_constraintEnd_toEndOf="@id/bt_si"
        />

    <Button
        android:id="@+id/bt_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btLog"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        app:layout_constraintStart_toStartOf="@id/bt_si"
        app:layout_constraintEnd_toEndOf="@id/bt_si"
        />

    <Button
        android:id="@+id/bt_si"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btSi"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/bt_log"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
